--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,6 @@
 *{margin:0;padding: 0;}
 body{background:#5D5D5D;}
-header#hd{background: #2A2A2A; width: 100%; height: 33px; text-align: center; padding-top: 18px; font:20px arial; color: #fff; margin-bottom: 30px;}
+header#hd{background: #2A2A2A; width: 100%; height: 33px; text-align: center; padding-top: 18px; font:20px arial; color: #fff; margin-bottom: 10px;}
 b.b1{color: #3D9150;}
 div#game_status{background: #2A2A2A; width: 100%; height: 33px; text-align: center; padding-top: 18px; font:20px arial; color: #fff; margin-bottom: 30px;}
 b.b2{color: #FF9900;}
@@ -15,7 +15,7 @@ section#game #players #middle #p1,#p2 {width: 40px; font-size: 50px; margin-top:
 section#game #players #middle #p1 {float: left;}
 section#game #players #middle #p2 {float:right;}
 section#game #players #middle #line {width: 2px; height: 55px; margin: -5px auto; background: #5D5D5D;}
-section#game #box {width:500px; height: 430px; margin: 15px auto;}
+section#game #box {width:500px; height: 430px; margin: 15px auto; clear : both;}
 section#game #box .boxs {width:110px; height: 90px; background: #E8E8E8; border-radius: 5px; float: left; margin:0 85px 40px 0; 
 text-align: center; font-size: 90px; font-family: 'american', arial, verdana; padding-top: 20px;}
 section#game #box .boxs:hover{background: #CCCCCC; cursor: pointer;}
@@ -123,3 +123,147 @@ div#text{margin-top: 20px; z-index:999; position: relative:;}
 	    padding: 10px 20px;
 	}
 }
+
+/* Popup */
+
+/* Popup box BEGIN */
+.hover_bkgr_fricc{
+			background:rgba(0,0,0,.4);
+			cursor:pointer;
+			display:none;
+			height:100%;
+			position:fixed;
+			text-align:center;
+			top:0;
+			width:100%;
+			z-index:10000;
+		}
+		.hover_bkgr_fricc .helper{
+			display:inline-block;
+			height:100%;
+			vertical-align:middle;
+		}
+		.hover_bkgr_fricc > div {
+			background-color: #fff;
+			box-shadow: 10px 10px 60px #555;
+			display: inline-block;
+			height: auto;
+			max-width: 551px;
+			min-height: 100px;
+			vertical-align: middle;
+			width: 60%;
+			position: relative;
+			border-radius: 2px;
+			padding: 15px 5%;
+		}
+		.popupCloseButton {
+			background-color: #fff;
+			border: 3px solid #999;
+			border-radius: 50px;
+			cursor: pointer;
+			display: inline-block;
+			font-family: arial;
+			font-weight: bold;
+			position: absolute;
+			top: -13px;
+			right: -12px;
+			font-size: 25px;
+			line-height: 30px;
+			width: 30px;
+			height: 30px;
+			text-align: center;
+		}
+		.popupCloseButton:hover {
+			background-color: #ccc;
+		}
+		.trigger_popup_fricc {
+			cursor: pointer;
+			font-size: 20px;
+			margin: 20px;
+			display: inline-block;
+			font-weight: bold;
+		}
+		/* Popup box BEGIN */
+		.form-group
+		{
+			width:100%;
+		}
+		.form-group input
+		{
+			display: block;
+			width: calc(99% - 20px);
+			height: 34px;
+			padding: 6px 12px;
+			font-size: 14px;
+			line-height: 1.42857143;
+			color: #555;
+			background-color: #fff;
+			background-image: none;
+			border: 1px solid #ccc;
+			border-radius: 4px;
+			-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+			box-shadow: inset 0 1px 1px rgba(0,0,0,.075);
+			-webkit-transition: border-color ease-in-out .15s,-webkit-box-shadow ease-in-out .15s;
+			-o-transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;
+			transition: border-color ease-in-out .15s,box-shadow ease-in-out .15s;	
+		}		
+		label
+		{			
+			float:left;
+			padding:5px 0;			
+		}
+		.button-group
+		{
+			margin-top:30px;
+		}
+		.button-group .yes
+		{
+		    color: #fff;
+			background-color: #5cb85c;
+			border-color: #4cae4c;
+			display: inline-block;
+			padding: 6px 12px;
+			margin-bottom: 0;
+			font-size: 14px;
+			font-weight: 400;
+			line-height: 1.42857143;
+			text-align: center;
+			white-space: nowrap;
+			vertical-align: middle;
+			-ms-touch-action: manipulation;
+			touch-action: manipulation;
+			cursor: pointer;
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			user-select: none;
+			background-image: none;
+			border: 1px solid transparent;
+			border-radius: 4px;
+		}
+		.button-group .no
+		{
+		    color: #fff;
+			background-color: #ac2925;
+			border-color: #761c19;
+			display: inline-block;
+			padding: 6px 12px;
+			margin-bottom: 0;
+			font-size: 14px;
+			font-weight: 400;
+			line-height: 1.42857143;
+			text-align: center;
+			white-space: nowrap;
+			vertical-align: middle;
+			-ms-touch-action: manipulation;
+			touch-action: manipulation;
+			cursor: pointer;
+			-webkit-user-select: none;
+			-moz-user-select: none;
+			-ms-user-select: none;
+			user-select: none;
+			background-image: none;
+			border: 1px solid transparent;
+			border-radius: 4px;
+		}
+/* Popup box BEGIN */
